add skip_cleanup: true

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ deploy:
   file:
   - rsaconfigcipher
   - rsaconfigcipher.exe
+  skip_cleanup: true
   on:
     repo: juusechec/RSAConfigCipher
     tags: true
